--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,5 +1,5 @@
 .background {
-    background-image: linear-gradient(to top, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.4) 80%), url("../assets/imgs/background.jpg");
+    background-image: linear-gradient(to top, rgba(0,0,0,0.4) 0%,rgba(0,0,0,0.4) 80%), url("../../../assets/imgs/background.jpg");
     background-position: center;
     background-size: cover;
 }
