--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,19 +1,28 @@
 <ion-header>
-	<ion-toolbar color="primary">
+	<ion-toolbar color="warning">
 		<ion-buttons slot="start">
 			<ion-menu-button></ion-menu-button>
 		</ion-buttons>
-		<ion-title>Header</ion-title>
+		<ion-title>Delivery</ion-title>
 	</ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen  class="background">
+<ion-content class="background" fullscreen="true">
 	<div text-center>
-		<img src="../../../assets/imgs/homepage-logo.png" width="128" height="128" />
+		<img src="../../../assets/imgs/homepage-logo.png" width="256" height="256" />
 	</div>
+	<ion-footer translucent="true" class="sticky">
+		<div class="speech-bubble-ds">
+			<h5>Πείνασες;</h5>
+			<h5>Παράγγειλε τώρα με μόλις
+				<strong>3</strong> βήματα!</h5>
+			<div class="speech-bubble-ds-arrow"></div>
+		</div>
+		<ion-button text-capitalize expand="block" size="large" color="warning" class="margin-bottom-percent-5" (click)="navigateToStoresPage()">Παράγγειλε τώρα!</ion-button>
+	</ion-footer>
 </ion-content>
 
-<ion-footer translucent="true">
+<!-- <ion-footer>
 	<ion-toolbar style="padding: 0 5%;">
 		<div class="speech-bubble-ds">
 			<h5>Πείνασες;</h5>
@@ -23,4 +32,4 @@
 		</div>
 		<ion-button text-capitalize expand="block" size="large" color="primary" class="margin-bottom-percent-5" (click)="navigateToStoresPage()">Παράγγειλε τώρα!</ion-button>
 	</ion-toolbar>
-</ion-footer>
+</ion-footer> -->
