--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -18,18 +18,6 @@
 				<strong>3</strong> βήματα!</h5>
 			<div class="speech-bubble-ds-arrow"></div>
 		</div>
-		<ion-button text-capitalize expand="block" size="large" color="warning" class="margin-bottom-percent-5" (click)="navigateToStoresPage()">Παράγγειλε τώρα!</ion-button>
+		<ion-button text-capitalize expand="block" size="large" color="warning" class="margin-bottom-percent-5">Παράγγειλε τώρα!</ion-button>
 	</ion-footer>
 </ion-content>
-
-<!-- <ion-footer>
-	<ion-toolbar style="padding: 0 5%;">
-		<div class="speech-bubble-ds">
-			<h5>Πείνασες;</h5>
-			<h5>Παράγγειλε τώρα με μόλις
-				<strong>3</strong> βήματα!</h5>
-			<div class="speech-bubble-ds-arrow"></div>
-		</div>
-		<ion-button text-capitalize expand="block" size="large" color="primary" class="margin-bottom-percent-5" (click)="navigateToStoresPage()">Παράγγειλε τώρα!</ion-button>
-	</ion-toolbar>
-</ion-footer> -->
