--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -25,7 +25,7 @@
 }
 .speech-bubble-ds {
     background: var(--ion-color-light, #fff);;
-    border: 1px solid var(--ion-color-primary, #fff);;
+    border: 1px solid var(--ion-color-warning, #fff);;
     -webkit-border-radius: 4px;
             border-radius: 4px;
     -webkit-box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.2);
@@ -46,7 +46,7 @@
 }
 .speech-bubble-ds-arrow::before {
     border-left: 23px solid transparent;
-    border-top: 23px solid var(--ion-color-primary, #fff);;
+    border-top: 23px solid var(--ion-color-warning, #fff);;
     bottom: 2px;
     content: "";
     position: absolute;
