--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,8 @@
   <ion-split-pane>
     <ion-menu>
       <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
+        <ion-toolbar color="warning">
+          <ion-title>Μενού</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
